<resources>
    <string name="app_name">Мероприятия</string>
    <string name="title_activity_members">Участники</string>
    <string name="title_activity_member_info">Анкета</string>
    <string name="member_info_FIO">ФИО</string>
    <string name="member_info_phone">Телефон</string>
    <string name="member_info_city">Город</string>
    <string name="member_info_company">Компания</string>
    <string name="member_info_email">Эл. почта</string>
    <string name="member_info_register_date">Дата регистрации</string>
    <string name="members_refresh_button">Обновить</string>
    <string name="events_no_date">not dated</string>
    <string name="date_utils_pattern">yyyy-MM-dd HH:mm:ss</string>
</resources>
